[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Maksik <maksym.oliinyk.knm.2020@lpnu.ua>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
